# longbridge-tax-workpaper

./: .gitattributes  .gitignore  CONTRIBUTING.md  HANDOFF.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  SKILL.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
.github/workflows/: ci.yml
agents/: openai.yaml
references/: output-sheets.md  precision-and-evidence.md  tax-boundaries.md  troubleshooting.md
scripts/: run_workpaper.py  validate_release.py
scripts/longbridge_tax_workpaper/: __init__.py  archive_determinism.py  cli.py  config.py  cost_basis.py  cost_basis_engine.py  cost_basis_models.py  discovery.py  dividends.py  filing_policy.py  filing_readiness.py  hashing.py  ingest.py  jurisdiction.py  margin_interest.py  money.py  normalize.py  pipeline.py  postprocess.py  release_hygiene.py  reporting.py  runner.py  schema.py  security.py  serialization.py  symbol_mapping.py  taxonomy.py  template_registry.py  validate.py  xlsx_determinism.py
scripts/longbridge_tax_workpaper/data/: default_jurisdiction.json  default_symbol_mapping.json  default_tax_policy.json  default_taxpayer_profile.json
tests/: conftest.py  test_cli.py  test_config.py  test_cost_basis_numeric.py  test_discovery.py  test_dividend_and_fx.py  test_extractors.py  test_financial_modules.py  test_idempotency.py  test_ingest_cache.py  test_normalize.py  test_postprocess_and_autoex.py  test_readiness.py  test_reporting.py  test_runtime_and_release.py  test_sensitive_release.py  test_template_registry.py  test_workbook_numeric_contract.py
(+8 files in other folders)
